--- a/index.html
+++ b/index.html
@@ -52,10 +52,23 @@
       </div>
     </div>
 
-    <!-- data-panel -->
-    <div class="row" id="data-panel">
-      <!-- print movie list here -->
+    <div class="row">
+      <!-- movies gener-->
+      <div class="col-sm-3">
+        <ul class="list-group" id="genre-list">
+          <!-- print movie genres here -->
+        </ul>
+      </div>
+
+      <div class="col-sm-9">
+        <!-- data-panel -->
+        <div class="row" id="data-panel">
+          <!-- print movie list here -->
+        </div>
+      </div>
+
     </div>
+
   </div>
 
   <!-- Modal -->
